# VelocityProfile

./: README.md
SCurve/: CMakeLists.txt  cpkg.toml
SCurve/simulation/: .python-version  plot_chassis_display.py  plot_display.py  pyproject.toml  s_curve.py  s_curve_eval.py  scurve_random_test.py  测试用例.txt
SCurve/simulation/test/: bench_perf.cpp  eval.hpp  new_ivelocity.hpp  new_s_curve.cpp  new_s_curve.hpp  old_ivelocity.hpp  old_s_curve.cpp  old_s_curve.hpp  test_compare.cpp  test_random.cpp
SCurve/src/: s_curve.cpp  s_curve.hpp  带初末状态约束的 S 形曲线路径规划.md
